Name:                 bonkuras
Version:              0.0.1
Build-type:           Simple
Synopsis:             A fighting game modled on Azumanga Daioh
Description:
    
    Battle your favourite characters

License:              Beer
License-file:         LICENSE
Author:               Lyndon Maydwell
Maintainer:           Lyndon Maydwell <maydwell@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Game
homepage:             http://github.com/sordina/bonkuras
data-files:           readme.md

library
  ghc-options: -Wall
  build-depends: base, zip-archive
  hs-source-dirs: src/
  exposed-modules:  
                      Bonkuras
